test/scc/stmt/semantic-errors/055.a
055.t:6:9: error: duplicate case value